# news_portal

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  GEMINI.md  LICENSE  PLAN.md  README.md  manage.py  pyproject.toml
.claude/: launch.json  settings.json
.claude/commands/: quality-review.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: deploy-production.yml  django.yml
apps/accounts/: admin.py  admin_roles.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/common/: admin.py  admin_guides.py  admin_mixins.py  admin_nav.py  context_processors.py  dashboard.py  embeds.py  models.py  sanitization.py  signals.py  test_embeds.py  tests.py  turnstile.py  validators.py  views.py
apps/contact/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/hiring/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/media_library/: admin.py  apps.py  models.py  tests.py
apps/news/: admin.py  apps.py  feeds.py  forms.py  models.py  newsletter.py  signals.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
apps/school/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/social/: admin.py  apps.py  models.py  signals.py  tests.py
config/: urls.py
config/settings/: base.py  development.py  production.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: MAINTENANCE_HISTORY.md  README.md
requirements/: base.txt  development.txt
templates/: base.html  base_news.html  base_school.html
(+130 files in other folders)
