[project]
name = "news-portal"
version = "0.1.0"
description = "Sistema web para escola e portal de notícias"
requires-python = ">=3.12"

[tool.ruff]
line-length = 200
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "tests.py test_*.py"
